--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.0.0.7:3306/healthapp
+spring.datasource.url=jdbc:mysql://localhost:3306/healthapp
 spring.datasource.userName=developer
 spring.datasource.password=Thirra1401!
 server.port=8090
